website/versioned_docs/version-2.12.x/reference/subsystems/helm-unittest.mdx
---
title: helm-unittest
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

BDD styled unit test framework for Kubernetes Helm charts as a Helm plugin. (https://github.com/quintush/helm-unittest)

Backend: <span className="color--primary">`pants.backend.experimental.helm`</span>

Config section: <span className="color--primary">`[helm-unittest]`</span>

<span className={styles.options}>

## Basic options

### `output_type`

<Option
  cli_repr={`--helm-unittest-output-type=<HelmUnitTestReportFormat>`}
  env_repr='PANTS_HELM_UNITTEST_OUTPUT_TYPE'
  one_of='XUnit, NUnit, JUnit'
  default_repr={`XUnit`}
>

Output type used for the test report

</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--helm-unittest-version=<str>`}
  env_repr='PANTS_HELM_UNITTEST_VERSION'
  default_repr={`0.2.8`}
>

Use this version of helmunittestsubsystem.

</Option>

### `known_versions`

<Option
  cli_repr={`--helm-unittest-known-versions="['<str>', '<str>', ...]"`}
  env_repr='PANTS_HELM_UNITTEST_KNOWN_VERSIONS'
  default_repr={`[\n  "0.2.8|linux_x86_64|d7c452559ad4406a1197435394fbcffe51198060de1aa9b4cb6feaf876776ba0|18299096",\n  "0.2.8|linux_arm64 |c793e241b063f0540ad9b4acc0a02e5a101bd9daea5bdf4d8562e9b2337fedb2|16943867",\n  "0.2.8|macos_x86_64|1dc95699320894bdebf055c4f4cc084c2cfa0133d3cb7fd6a4c0adca94df5c96|18161928",\n  "0.2.8|macos_arm64 |436e3167c26f71258b96e32c2877b4f97c051064db941de097cf3db2fc861342|17621648"\n]`}
>


Known versions to verify downloads against.

Each element is a pipe-separated string of `version|platform|sha256|length`, where:
```
- `version` is the version string
- `platform` is one of [linux_arm64,linux_x86_64,macos_arm64,macos_x86_64],
- `sha256` is the 64-character hex representation of the expected sha256
digest of the download file, as emitted by `shasum -a 256`
- `length` is the expected length of the download file in bytes, as emitted by
`wc -c`
```

E.g., `3.1.2|macos_x86_64|6d0f18cd84b918c7b3edd0203e75569e0c7caecb1367bbbe409b44e28514f5be|42813`.

Values are space-stripped, so pipes can be indented for readability if necessary.

</Option>

### `use_unsupported_version`

<Option
  cli_repr={`--helm-unittest-use-unsupported-version=<UnsupportedVersionUsage>`}
  env_repr='PANTS_HELM_UNITTEST_USE_UNSUPPORTED_VERSION'
  one_of='error, warning'
  default_repr={`error`}
>


What action to take in case the requested version of helmunittestsubsystem is not supported.

Supported helmunittestsubsystem versions: unspecified

</Option>

### `url_template`

<Option
  cli_repr={`--helm-unittest-url-template=<str>`}
  env_repr='PANTS_HELM_UNITTEST_URL_TEMPLATE'
  default_repr={`https://github.com/quintush/helm-unittest/releases/download/v{version}/helm-unittest-{platform}-{version}.tgz`}
>

URL to download the tool, either as a single binary file or a compressed file (e.g. zip file). You can change this to point to your own hosted file, e.g. to work with proxies or for access via the filesystem through a `file:$abspath` URL (e.g. `file:/this/is/absolute`, possibly by [templating the buildroot in a config file](https://www.pantsbuild.org/v2.12/docs/options#config-file-entries)).

Use `{version}` to have the value from --version substituted, and `{platform}` to have a value from --url-platform-mapping substituted in, depending on the current platform. For example, https://github.com/.../protoc-&#123;version&#125;-&#123;platform&#125;.zip.

</Option>

### `url_platform_mapping`

<Option
  cli_repr={`--helm-unittest-url-platform-mapping="{'key1': val1, 'key2': val2, ...}"`}
  env_repr='PANTS_HELM_UNITTEST_URL_PLATFORM_MAPPING'
  default_repr={`{\n  "linux_arm64": "linux-arm64",\n  "linux_x86_64": "linux-amd64",\n  "macos_arm64": "macos-arm64",\n  "macos_x86_64": "macos-amd64"\n}`}
>

A dictionary mapping platforms to strings to be used when generating the URL to download the tool.

In --url-template, anytime the `{platform}` string is used, Pants will determine the current platform, and substitute `{platform}` with the respective value from your dictionary.

For example, if you define `{"macos_x86_64": "apple-darwin", "linux_x86_64": "unknown-linux"}`, and run Pants on Linux with an intel architecture, then `{platform}` will be substituted in the --url-template option with unknown-linux.

</Option>

## Deprecated options

None

</span>